# Project_2_vacancy-search

./: README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
data/: areas.json  currencies.json  vacancies.json
src/api/: area_lookup.py  base_api.py  hh_api.py
src/interface/: user_interface.py
src/models/: vacancy.py
src/storage/: base_storage.py  json_storage.py
src/utils/: currency_loader.py  helpers.py
tests/: test_area_lookup.py  test_currency_loader.py  test_helpers.py  test_hh_api.py  test_json_storage.py  test_user_interface.py  test_vacancy.py
