[tool.poetry]
name = "Проект 2. Поиск вакансийй"
version = "0.1.0"
description = ""
authors = ["Den <serge23023@gmail.com>"]
readme = "README.md"
packages = [{include = "13"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest-cov = "^6.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
